# kess-py

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docker/: build.sh
docker/amd64/: build.sh
docker/amd64/kess-python/: Dockerfile
docker/amd64/kess-python-runtime/: Dockerfile
docker/common/kess-python-runtime/: main.py
docker/kess-py/: Dockerfile
docker/kess-python/: Dockerfile
docker/tools/: build.sh
examples/: main.py
examples/fn/exec/: v1.py  v2.py
examples/functions/: exec.py
kess/: __init__.py  actor.py  app.py  asyncio.py  env.py  function.py  imports.py  invocation.py  rpc.py  version.py
kess/server/: actor.py  app.py  invocation.py  module.py
kess/server/extensions/: __init__.py  actor.py  base.py  modules.py
tools/: build.sh  publish.sh  release.sh  upgrade.sh  version.sh
