[tool.poetry]
name = "kess"
version = "0.14.0"
description = ""
authors = ["majik <me@yamajik.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
dapr = "^1.0.0"
dapr-ext-fastapi = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
uvicorn = "^0.13.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
